platform/apps/bluesky/network/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: bluesky-gateway
  namespace: bluesky
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "bsky.sne.moe"
        - "*.bsky.sne.moe"

    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: bluesky-tls
      hosts:
        - "bsky.sne.moe"
        - "*.bsky.sne.moe"
