platform/apps/bluesky/network/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: bluesky
  namespace: bluesky
spec:
  host: pds-service.bluesky.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
