platform/apps/bluesky/network/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: bluesky
  namespace: bluesky
spec:
  hosts:
    - "bsky.sne.moe"
    - "*.bsky.sne.moe"
  gateways:
    - bluesky-gateway

  http:
    - match:
        - port: 80
      redirect:
        scheme: https
        port: 443
        redirectCode: 308

    - match:
        - port: 443
          uri:
            prefix: /
      route:
        - destination:
            host: pds-service.bluesky.svc.cluster.local
            port:
              number: 3000
